--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -19,18 +19,14 @@ jobs:
   build:
     runs-on: ubuntu-latest
     
-    strategy:
-      matrix:
-        node-version: [18.x, 20.x]
-    
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
       
-      - name: Setup Node.js ${{ matrix.node-version }}
+      - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version: '18.x'
           cache: 'npm'
       
       - name: Install dependencies
@@ -43,7 +39,7 @@ jobs:
         run: npm test -- --passWithNoTests
       
       - name: Build for GitHub Pages
-        run: npm run build:github
+        run: GITHUB_PAGES=true npm run build
       
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
